--- a/apps/editor/tuidoc.config.json
+++ b/apps/editor/tuidoc.config.json
@@ -54,7 +54,8 @@
       "example19-customizing-toolbar-buttons": "19. Customizing Toolbar Buttons",
       "example20-i18n": "20. Internationalization (i18n)",
       "example21-placeholder": "21. Placeholder"
-    }
+    },
+    "globalErrorLogVariable": true
   },
   "pathPrefix": "tui.editor"
 }
